# rust-axum-prometheus-metrics

./: Cargo.toml
src/: main.rs
